k8s/employee-consumer-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: employee-consumer-pod
  labels:
    app: employee-consumer
spec:
  containers:
    - name: service
      image: go-employee-consumer:latest
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8080
      livenessProbe:
        failureThreshold: 3
        httpGet:
          path: /healthcheck/
          port: 8080
          scheme: HTTP
        initialDelaySeconds: 30
        periodSeconds: 15
        successThreshold: 1
        timeoutSeconds: 15
      readinessProbe:
        httpGet:
          path: /healthcheck/
          port: 8080
        initialDelaySeconds: 3
        periodSeconds: 3
      startupProbe:
        httpGet:
          path: /healthcheck/
          port: 8080
        failureThreshold: 30
        periodSeconds: 10
      resources:
        limits:
          cpu: "1"
          memory: 4Gi
        requests:
          cpu: 10m
          memory: 1Gi
