k8s/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-dev
  namespace: default
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: docker.io/keycloak/keycloak:26.4
          command: ["/opt/keycloak/bin/kc.sh"]
          args: ["start-dev", "--import-realm", "--verbose"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: import-volume
              mountPath: /opt/keycloak/data/import
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: "250m"
              memory: 512Mi
      volumes:
        - name: import-volume
          configMap:
            name: keycloak-import-config
