k8s/employee-consumer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-consumer-service
spec:
  selector:
    app: employee-consumer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

# kubectl apply -f k8s/employee-consumer-svc.yaml
