k8s/kafka-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: default
spec:
  ports:
    - port: 9092
      targetPort: 9092
  selector:
    app: kafka
