k8s/keycloak-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: default
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: keycloak
