k8s/zookeeper-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
  namespace: default
spec:
  ports:
    - port: 2181
      targetPort: 2181
  selector:
    app: zookeeper
