k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: api.employee.local
      http:
        paths:
          # service: employee-service (Producer / CRUD)
          - path: /employee-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: employee-service
                port:
                  number: 8080
          # service: employee-consumer-service (Consumer / Read Replica API)
          - path: /employee-consumer(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: employee-consumer-service
                port:
                  number: 8080
          # service: auth-service (Auth / User Management)
          - path: /auth-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 8080

# kubectl apply -f k8s/ingress.yaml
